--- a/mini-project-1.html
+++ b/mini-project-1.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Jessica Sun" />
 
 
 <title>Mini Data-Analysis Deliverable 1</title>
@@ -349,6 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Mini Data-Analysis Deliverable 1</h1>
+<h4 class="author">Jessica Sun</h4>
 
 </div>
 
